# odbc-explained-with-python

./: .gitignore  README.md  docker_setup.sh  odbc.py  pep_249.py  pyproject.toml  requirements.txt  simple_pg_protocol.py
.github/workflows/: test.yaml
example_usage/: odbc_driver.py  odbc_to_pep249.py  raw_pg_protocol.py
src/db_utils/: __init__.py  odbc_driver.py  pep_249.py  pep_249_odbc_manager.py  simple_pg_protocol.py
tests/: client.py  conftest.py  decode_tcp_response.py  test.py  test_direct_pep249.py  test_odbc_driver.py  test_odbc_to_pep249.py  test_pg_protocol.py  test_postgres_docker.py
